@@ -33,6 +33,8 @@ v8.0.0:
      first application startup (XML files are not deleted for backup reasons)
    - The SQLite Export feature has been removed, as this is the default
  ExerciseViewer changes:
+ - Garmin FIT parser: bugfix for handling laps without any speed data
+   (when the lap contains just a break without any activity)
 
 v7.9.1:
  Project changes:
